Fix banners not fitting in their containers

--- a/homepage/style.css
+++ b/homepage/style.css
@@ -137,7 +137,7 @@ header h3 a{
 .banner3 {
     width: 100%;
     position: relative;
-    height: 400px; /* Set a fixed height so images can fill proportionally */
+    height: 1000px; /* Set a fixed height so images can fill proportionally */
     overflow: hidden;
 }
 
